# cNFDrugScreening

./: 00_createCurveStats.py  01_evalDrugStats.Rmd  01_harmonize_drug_data.Rmd  02_drugEnrichment.Rmd  02_normalize_harmonize_proteomics.html  02_normalize_harmonize_proteomics.rmd  03_drug_biomarkers.Rmd  LICENSE  README.md  cNF Document for huyen.docx  cNF_Cohort_1_Process_and_Upload.py  cNF_helper_code.R  process_phospho_data.Rmd  pyproject.toml  sgcca_ave.R
cnf/: data_import.py  decomposition.py  drug_response.py  figure_setup.py
cnf/figures/: compare_cohorts.py  drug_sensitivity.py  image_feat_decomp.py  sgcca_heatmap.py
