[project]
name = "cnfdrugscreening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coderdata",
    "inmoose>=0.8.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "synapseclient>=4.9.0",
    "tensorly>=0.9.0",
    "umap-learn>=0.5.9.post2",
]

[tool.uv.sources]
coderdata = { git = "https://github.com/PNNL-CompBio/coderdata.git" }
